@@ -148,8 +148,13 @@
                                                 <input id="" name="" class="required form-control input-md" required="" type="text">
                                             </div>
                                             <div class="modal-footer">
-                                                <button id="cancel" name="cancel" class="pull-left btn btn-default"> Cancel</button>
-                                                <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                                                <div class="clearfix">
+                                                    <div class="pull-right">
+                                                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -207,8 +212,13 @@
                                                 <input id="" name="" class="required form-control input-md" required="" type="text">
                                             </div>
                                             <div class="modal-footer">
-                                                <button id="cancel" name="cancel" class="pull-left btn btn-default"> Cancel</button>
-                                                <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                                                <div class="clearfix">
+                                                    <div class="pull-right">
+                                                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -242,8 +252,13 @@
                                                 <input id="" name="" class="required form-control input-md" required="" type="text">
                                             </div>
                                             <div class="modal-footer">
-                                                <button id="cancel" name="cancel" class="pull-left btn btn-default"> Cancel</button>
-                                                <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                                                <div class="clearfix">
+                                                    <div class="pull-right">
+                                                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
