@@ -428,8 +428,11 @@
 
                                 <hr />
                                 <div class="butttons-footer spacerbottom15 clearfix">
-                                    <button id="cancel" name="cancel" class="btn btn-default"> Cancel</button>
-                                    <a role="button" id="save" name="save" href="edit-agreement.html" class="pull-right btn btn-primary"> Save</a>
+                                    <div class="pull-right">
+                                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                    </div>
                                 </div>
 
                                 <div class="tablecontainer">
