@@ -171,8 +171,13 @@
                                         <input id="" name="" class="required form-control input-md" required="" type="text">
                                     </div>
                                     <div class="modal-footer">
-                                        <button id="cancel" name="cancel" class="pull-left btn btn-default"> Cancel</button>
-                                        <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                                        <div class="clearfix">
+                                            <div class="pull-right">
+                                                <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                                <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -208,8 +213,13 @@
                                     <input id="" name="" class="required form-control input-md" required="" type="text">
                                 </div>
                                 <div class="modal-footer">
-                                    <button id="cancel" name="cancel" class="pull-left btn btn-default"> Cancel</button>
-                                    <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                                    <div class="clearfix">
+                                        <div class="pull-right">
+                                            <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                            <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -324,9 +334,11 @@
                     </div>
                 </form>
 
-                <div class="buttons-footer">
-                    <button id="cancel" name="cancel" class="btn btn-default"> Cancel</button>
-                    <button id="save" name="save" class="pull-right btn btn-primary"> Save</button>
+                <div class="butttons-footer clearfix">
+                    <div class="pull-right">
+                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                    </div>
                 </div>
                 <div class="row">
 
@@ -512,8 +524,13 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button id="save" name="save" class="btn btn-primary">Save</button>
-                                <button id="cancel" name="cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <div class="clearfix">
+                                    <div class="pull-right">
+                                        <button id="cancel" data-dismiss="modal" name="cancel" class="btn btn-default btn-cancel pull-right"> Cancel</button>
+
+                                        <button id="save" data-dismiss="modal" name="save" class="btn btn-primary btn-submit pull-right"> Save</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
