@@ -340,7 +340,7 @@
 
                         <div id="agreements" class="tab-pane fade in tabs-info">
 
-                            <a id="agreement-search" href="agreement-search.html" class="btn carrier-btn pull-right btn-table"> Search</a>
+                            <a id="agreement-search" href="carrier-search.html" class="btn carrier-btn pull-right btn-table"> Search</a>
                             <div class="portal-tables">
                                 <table class="table-hover table-striped table-condensed cf no-border">
                                     <thead class="cf">
